Bug 21089: Overlapping elements in ordering information on acqui/supplier.pl
This patch changes the HTML structure of the vendor edit page so that
the markup is a little simpler. CSS is modified to match. This structure
should serve as a model for other similar form structures:

 <fieldset class="rows">
     <ol>
         <li>
             <label>General label:</label>
             <label class="radio">
                 Specific label 1 <input type="radio" />
             </label>
             <label class="radio">
                 Specific label 2 <input type="radio" />
             </label>
         </li>
     </ol>
 </fieldset>

To test, apply the patch and regenerate the staff client CSS.

 - Go to Acquisitions -> Vendor search -> Vendor -> Edit vendor
 - In the "Ordering information" section, confirm that the position of
   radio buttons looks correct.
 - Confirm that radio button labels work correctly.
 - Confirm that the adjacent dropdown menus work well.


(cherry picked from commit 5c547ffff2ca04a87695a57e972171cd76cc828c)

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -1049,6 +1049,13 @@ fieldset {
                 margin-left: 1em;
             }
 
+            &.radio {
+                display: inline-block;
+                margin: 0 1em 0 0;
+                padding: 0;
+                width: auto;
+            }
+
             &.yesno {
                 float: none;
                 width: auto;
